Fix spacing for guide on mobile

--- a/src/styles/guide.css
+++ b/src/styles/guide.css
@@ -1,7 +1,8 @@
 .guide {
   max-width: 800px;
   text-align: center;
-  padding: 1rem;
+  padding: 2rem 0.5rem;
+  margin: 0 0 2rem;
 
   border: 1px solid var(--color-cream-dark);
   border-bottom: 1px solid var(--color-cream-darker);
@@ -11,12 +12,14 @@
 
   @media screen and (min-width: 800px) {
     margin: 1rem auto 2rem;
+    padding: 1rem;
   }
 }
 
 .guide h1 {
   font-size: 1.5rem;
   font-weight: 600;
+  margin-top: 0;
 }
 
 .guide--topic-selector {
@@ -35,13 +38,17 @@
   border: 2px solid var(--color-cream-dark);
   padding: 4px 10px;
   border-radius: 20px;
-  font-size: 1rem;
+  font-size: 0.9rem;
   cursor: pointer;
   user-select: none;
 
   &:hover {
     background-color: var(--color-cream);
     border-color: var(--color-cream-darker);
+  }
+
+  @media screen and (min-width: 500px) {
+    font-size: 1rem;
   }
 
   @media screen and (min-width: 800px) {
